add swagger annotation for all method
